--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GoldenHarvest",
-  "name": "Golden Harvest Shop",
+  "short_name": "AgroTech",
+  "name": "Agro Tech Harvest Shop",
   "icons": [
     {
       "src": "favicon.ico",
